<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Common.LoginSignUp.VertifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:padding="5dp"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textSize="100sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:fontFamily="@font/coves_bold"
            android:includeFontPadding="true"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:fontFamily="@font/coves_bold"
            android:includeFontPadding="true"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_decripstion_text"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:fontFamily="@font/coves_bold"
            android:includeFontPadding="true"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/cardview_dark_background"
            android:itemBackground="@color/white"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gold"
            android:text="@string/verify_code"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</ScrollView>